--- a/src/index.html
+++ b/src/index.html
@@ -5,44 +5,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Proj_Filmoteka_2.0-Team-03</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-
-    <!-- Don't forget to delete this style tag. -->
-    <style>
-      body {
-        min-height: 100vh;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .intro {
-        text-align: center;
-      }
-
-      .intro h1 {
-        margin-top: 0;
-        font-weight: 500;
-        font-size: 40px;
-      }
-
-      .intro img {
-        display: block;
-        max-width: 100%;
-        height: auto;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="./normalize.css" />
+    <link rel="stylesheet" type="text/css" href="./style2.css" />
   </head>
 
   <body>
-    <article class="intro">
-      <h1>Proj_Filmoteka_2.0-Team-03</h1>
+    <div class="container">
+      <div class="row no-gutters">
+        <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"> -->
+        <!--  -->
+        <header class="header col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <nav class="header-nav">
+            <a class="header-logo" href="#">filmoteka</a>
+            <ul class="header-menu">
+              <li class="header-menu-list">
+                <a href="#" class="menu-list-name">home</a>
+              </li>
+              <li class="header-menu-list">
+                <a href="#" class="menu-list-name">my library</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="search">
+            <input type="text" class="header-search" placeholder="Поиск фильмов" />
+          </div>
+          <div class="header-search-resultNotSuccess">
+            <p>Search result not successful. Enter the correct movie name and try again.</p>
+          </div>
+        </header>
+      </div>
+      <!--  -->
+      <!-- </div> -->
+      <div class="row no-gutters">
+        <main class="filmoteka">
+          <!-- <div class="container">
+            <div class="row"></div>
+          </div> -->
+          <ul class="poster">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <!-- template for poster -->
+              <li class="poster-card">
+                <img src="./images/Слой5.png" alt="" class="poster-image" />
+                <h3 class="poster-name">GREYHOUND</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+              <!-- end template -->
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой6.png" alt="" class="poster-image" />
+                <h3 class="poster-name">MONSTER HUNTER</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой7.png" alt="" class="poster-image" />
+                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+                <h4 class="poster-description">Drama, Comedy | 2019</h4>
+              </li>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <!-- template for poster -->
+              <li class="poster-card">
+                <img src="./images/Слой5.png" alt="" class="poster-image" />
+                <h3 class="poster-name">GREYHOUND</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+              <!-- end template -->
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой6.png" alt="" class="poster-image" />
+                <h3 class="poster-name">MONSTER HUNTER</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой7.png" alt="" class="poster-image" />
+                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+                <h4 class="poster-description">Drama, Comedy | 2019</h4>
+              </li>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <!-- template for poster -->
+              <li class="poster-card">
+                <img src="./images/Слой5.png" alt="" class="poster-image" />
+                <h3 class="poster-name">GREYHOUND</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+              <!-- end template -->
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой6.png" alt="" class="poster-image" />
+                <h3 class="poster-name">MONSTER HUNTER</h3>
+                <h4 class="poster-description">Drama, Action | 2020</h4>
+              </li>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+              <li class="poster-card">
+                <img src="./images/Слой7.png" alt="" class="poster-image" />
+                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+                <h4 class="poster-description">Drama, Comedy | 2019</h4>
+              </li>
+            </div>
+          </ul>
+        </main>
+        <!-- end main -->
+      </div>
+      <section class="pageNumber">
+        <div class="row no-gutters">
+          <div class="col-xl-12 col-sm-12 col-lg-12">
+            <p>pageNumeration</p>
+          </div>
+        </div>
+      </section>
+      <div class="row no-gutters">
+        <div class="col-xl-12 col-sm-12 col-lg-12">
+          <footer class="filmoteka-bottom">
+            <p class="copyright">2020 | All Rights Reserved | Developed with</p>
+          </footer>
+        </div>
+      </div>
+    </div>
 
-      <!-- HTML image reference example. -->
-      <img src="./images/home_1024px.jpg" alt="" width="1024" />
-    </article>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
