--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,17 @@
             </ul>
           </nav>
           <div class="search">
-            <input type="text" class="header-search" placeholder="Поиск фильмов" />
+            <input
+              type="text"
+              class="header-search"
+              placeholder="Поиск фильмов"
+            />
           </div>
           <div class="header-search-resultNotSuccess">
-            <p>Search result not successful. Enter the correct movie name and try again.</p>
+            <p>
+              Search result not successful. Enter the correct movie name and try
+              again.
+            </p>
           </div>
         </header>
       </div>
@@ -44,80 +51,20 @@
       <!-- </div> -->
       <div class="row no-gutters">
         <main class="filmoteka">
+          <ul class="movie-gallery"></ul>
+          <div class="d-flex justify-content-center">
+            <div
+              class="spinner-grow text-primary"
+              style="width: 5rem; height: 5rem;"
+              role="status"
+            >
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          <div id="pagination" class="tui-pagination"></div>
           <!-- <div class="container">
             <div class="row"></div>
           </div> -->
-          <ul class="poster">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <!-- template for poster -->
-              <li class="poster-card">
-                <img src="./images/Слой5.png" alt="" class="poster-image" />
-                <h3 class="poster-name">GREYHOUND</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-              <!-- end template -->
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой6.png" alt="" class="poster-image" />
-                <h3 class="poster-name">MONSTER HUNTER</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой7.png" alt="" class="poster-image" />
-                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
-                <h4 class="poster-description">Drama, Comedy | 2019</h4>
-              </li>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <!-- template for poster -->
-              <li class="poster-card">
-                <img src="./images/Слой5.png" alt="" class="poster-image" />
-                <h3 class="poster-name">GREYHOUND</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-              <!-- end template -->
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой6.png" alt="" class="poster-image" />
-                <h3 class="poster-name">MONSTER HUNTER</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой7.png" alt="" class="poster-image" />
-                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
-                <h4 class="poster-description">Drama, Comedy | 2019</h4>
-              </li>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <!-- template for poster -->
-              <li class="poster-card">
-                <img src="./images/Слой5.png" alt="" class="poster-image" />
-                <h3 class="poster-name">GREYHOUND</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-              <!-- end template -->
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой6.png" alt="" class="poster-image" />
-                <h3 class="poster-name">MONSTER HUNTER</h3>
-                <h4 class="poster-description">Drama, Action | 2020</h4>
-              </li>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-              <li class="poster-card">
-                <img src="./images/Слой7.png" alt="" class="poster-image" />
-                <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
-                <h4 class="poster-description">Drama, Comedy | 2019</h4>
-              </li>
-            </div>
-          </ul>
         </main>
         <!-- end main -->
       </div>
