Replaced favicon.ico and added favicon links to html in comments.

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     />
     <!-- <link rel="stylesheet" type="text/css" href="./normalize.css" />
     <link rel="stylesheet" type="text/css" href="./style2.css" /> -->
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">   -->
   </head>
 
   <body>
