--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,13 @@
       </div>
     </div>
 
+    <!-- library -->
+    <div class="library-container">
+      <div class="btn-container">
+        <button type="button" data-action="watched">Watched</button>
+        <button type="button" data-action="queue">Queue</button>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
