--- a/src/index.html
+++ b/src/index.html
@@ -5,106 +5,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Proj_Filmoteka_2.0-Team-03</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <!-- <link rel="stylesheet" type="text/css" href="./normalize.css" />
-    <link rel="stylesheet" type="text/css" href="./style2.css" /> -->
+    <link rel="stylesheet" type="text/css" href="./normalize.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
 
   <body>
-    <div class="container">
-      <div class="row no-gutters">
-        <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"> -->
-        <!--  -->
-        <header class="header col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <nav class="header-nav">
-            <a class="header-logo" href="#">filmoteka</a>
-            <ul class="header-menu">
-              <li class="header-menu-list">
-                <a href="#" class="menu-list-name">home</a>
-              </li>
-              <li class="header-menu-list">
-                <a href="#" class="menu-list-name">my library</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="search">
-            <input
-              type="text"
-              class="header-search"
-              placeholder="Поиск фильмов"
-            />
-          </div>
-          <div class="header-search-resultNotSuccess">
-            <p>
-              Search result not successful. Enter the correct movie name and try
-              again.
-            </p>
-          </div>
-        </header>
+    <!--  -->
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="#">filmoteka</a>
+        <ul class="header-menu">
+          <li class="header-menu-list">
+            <a href="#" class="menu-list-name">home</a>
+          </li>
+          <li class="header-menu-list">
+            <a href="#" class="menu-list-name">my library</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="search">
+        <input type="text" class="header-search" placeholder="Поиск фильмов" />
       </div>
-      <!--  -->
-      <!-- </div> -->
-      <div class="row no-gutters">
-        <main class="filmoteka">
-          <ul class="movie-gallery"></ul>
-          <div class="d-flex justify-content-center">
-            <div
-              class="spinner-grow text-primary"
-              style="width: 5rem; height: 5rem;"
-              role="status"
-            >
-              <span class="sr-only">Loading...</span>
-            </div>
-          </div>
-          <div id="pagination" class="tui-pagination"></div>
-          <!-- <div class="container">
-            <div class="row"></div>
-          </div> -->
-        </main>
-        <!-- end main -->
+      <div class="header-search-resultNotSuccess visibleFlag">
+        <p>Search result not successful. Enter the correct movie name and try again.</p>
       </div>
-      <section class="pageNumber">
-        <div class="row no-gutters">
-          <div class="col-xl-12 col-sm-12 col-lg-12">
-            <p>pageNumeration</p>
-          </div>
-        </div>
-      </section>
-      <div class="row no-gutters">
-        <div class="col-xl-12 col-sm-12 col-lg-12">
-          <footer class="filmoteka-bottom">
-            <p class="copyright">2020 | All Rights Reserved | Developed with</p>
-          </footer>
-        </div>
-      </div>
-    </div>
+    </header>
 
-    <!-- library -->
-    <div class="library-container">
-      <div class="btn-container">
-        <button type="button" data-action="watched">Watched</button>
-        <button type="button" data-action="queue">Queue</button>
+    <!--  -->
+    <!-- </div> -->
+    <main class="filmoteka">
+      <ul class="poster">
+        <!-- template for poster -->
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой5.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">GREYHOUND</h3>
+          <h4 class="poster-description">Drama, Action | 2020</h4>
+        </li>
+        <!-- end template -->
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой6.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">MONSTER HUNTER</h3>
+          <h4 class="poster-description">Drama, Action | 2020</h4>
+        </li>
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой7.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+          <h4 class="poster-description">Drama, Comedy | 2019</h4>
+        </li>
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой5.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">GREYHOUND</h3>
+          <h4 class="poster-description">Drama, Action | 2020</h4>
+        </li>
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой7.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+          <h4 class="poster-description">Drama, Comedy | 2019</h4>
+        </li>
+        <li class="poster-card">
+          <div class="poster-image-box">
+            <img src="./images/Слой6.png" alt="" class="poster-image" />
+          </div>
+          <h3 class="poster-name">ONCE UPON A TIME... IN HOLLYWOOD</h3>
+          <h4 class="poster-description">Drama, Comedy | 2019</h4>
+        </li>
+      </ul>
+    </main>
+    <!-- end main -->
+    <section class="pageNumber">
+      <div class="box-pageNumber box-pageNumber-arrow">
+        <img src="./images/icon_arrow_left.png" alt="" />
       </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">1</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">&middot;&middot;&middot;</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">8</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber active-pageNumber">9</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">10</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">&middot;&middot;&middot;</p>
+      </div>
+      <div class="box-pageNumber">
+        <p class="number-pageNumber">18</p>
+      </div>
+      <div class="box-pageNumber box-pageNumber-arrow">
+        <img src="./images/icon_arrow_right.png" alt="" />
+      </div>
+    </section>
+    <div>
+      <footer class="copyright">
+        <div class="copy">
+          <p class="copyright-info">2020 | All Rights Reserved |</p>
+        </div>
+        <div class="devels">
+          <p class="developed">Developed with</p>
+          <p class="developed developed-student">by</p>
+          <p class="developed developed-who">GoIT Students</p>
+        </div>
+      </footer>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
