разобрался с апи и сделал шаблон малой карточки

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="./normalize.css" />
-    <link rel="stylesheet" type="text/css" href="./style2.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./normalize.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="./style2.css" /> -->
   </head>
 
   <body>
