--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,10 @@
           <a class="header-logo" href="#"><span class="header-logo-text">filmoteka</span> </a>
           <ul class="header-menu">
             <li class="header-menu-list">
-              <a href="#" class="menu-list-name">home</a>
+              <a href="#" class="menu-list-name js-home-btn">home</a>
             </li>
             <li class="header-menu-list">
-              <a href="#" class="menu-list-name">my library</a>
+              <a href="#" class="menu-list-name js-my-library-btn">my library</a>
             </li>
           </ul>
         </nav>
