--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-
   </head>
 
   <body>
@@ -20,10 +19,7 @@
       <!--  -->
       <header class="header">
         <nav class="header-nav">
-
-          <a class="header-logo" href="#"
-            ><span class="header-logo-text">filmoteka</span>
-          </a>
+          <a class="header-logo" href="#"><span class="header-logo-text">filmoteka</span> </a>
 
           <ul class="header-menu">
             <li class="header-menu-list">
@@ -36,19 +32,8 @@
         </nav>
         <div class="blockHome">
           <div class="search">
-
-            <input
-              type="text"
-              class="header-search"
-              placeholder="Поиск фильмов"
-            />
-            <img
-              class="header-search-img"
-              src="./images/icon_search.svg"
-              alt=""
-            />
-
- 
+            <input type="text" class="header-search" placeholder="Поиск фильмов" />
+            <img class="header-search-img" src="./images/icon_search.svg" alt="" />
           </div>
           <div class="header-search-resultNotSuccess visibleFlag">
             <p>
@@ -81,13 +66,7 @@
         <!--  -->
         <!-- хрен знает зачем єто -->
         <div class="d-flex justify-content-center">
-
-          <div
-            class="spinner-grow text-primary"
-            style="width: 5rem; height: 5rem;"
-            role="status"
-          >
-
+          <div class="spinner-grow text-primary" style="width: 5rem; height: 5rem;" role="status">
             <span class="sr-only">Loading...</span>
           </div>
         </div>
@@ -141,14 +120,8 @@
         <footer class="copyright">
           <div class="copy">
             <p class="copyright-info">
+              <img class="copyright-info-image" src="./images/copyright-24px.svg" alt="" />
 
-              <img
-                class="copyright-info-image"
-                src="./images/copyright-24px.svg"
-                alt=""
-              />
-
-  
               2020 | All Rights Reserved |
             </p>
           </div>
@@ -156,11 +129,7 @@
             <p class="developed">
               Developed with
 
-              <img
-                class=".developed-student-image"
-                src="./images/icon_herat.svg"
-                alt=""
-              />
+              <img class=".developed-student-image" src="./images/icon_herat.svg" alt="" />
 
               by <span class="developed developed-who">GoIT Students</span>
             </p>
