--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       <!--  -->
       <!-- </div> -->
       <main class="filmoteka">
+
+        <ul class="library-gallery"></ul>
         <!-- <ul class="poster"> -->
         <ul class="movie-gallery">
           <!-- ============================================================================ -->
