Link to goit.ua added to footer. Corsor pointer added to poster-image-box in styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,9 @@
 
               <img class=".developed-student-image" src="./images/icon_herat.svg" alt="" />
 
-              by <span class="developed developed-who">GoIT Students</span>
+              by <span class="developed developed-who">
+                <a href="https://goit.ua/" target="_blank">GoIT Students </a>
+                </span>
             </p>
           </div>
         </footer>
