--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
               <img class=".developed-student-image" src="./images/icon_herat.svg" alt="" />
 
               by <span class="developed developed-who">
-                <a href="https://goit.ua/" target="_blank">GoIT Students </a>
+                <a href="https://goit.ua/" target="_blank"> Dmytro OSIN and his bravery team </a>
                 </span>
             </p>
           </div>
